# Research_AI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  host.py  host_langchain.py  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
Agent/: client.py  langgraph.json  langgraph_studio_clone.jsx  package-lock.json  package.json  pyproject.toml  servers
LangChain_Learning/: langgraph.ipynb
langgraph/servers/: postgres_server.py  pubmed_server.py  server_config.json
memory_agent/: Research_AI.py  __init__.py  prompts.py  tools.py
papers/"kun_zhang"_ucsd_author/: papers_info.json
papers/altimmune_pemvidutide_mash_obesity/: papers_info.json
papers/bladder_single_cell_data_kun_zhang/: papers_info.json
papers/bladder_single_cell_rna-seq/: papers_info.json
papers/cell_segmentation_tools_cytokit_deepcell_stellar/: papers_info.json
papers/cole_trapnell/: papers_info.json
papers/cytokit_cell_segmentation/: papers_info.json
papers/cytokit_deepcelltypes_ribca_stellar/: papers_info.json
papers/cytokit_multiplexed_tissue_imaging_cell_segmentation/: papers_info.json
servers/: cellxgene.ipynb  cellxgene_server.py  census_info_datasets.tsv  census_info_id_per_tissue.tsv  gget_server.py  gget_server_ext.py  hubmap-datasets-metadata-2025-08-03_13-39-35.tsv  hubmap.ipynb  hubmap_server.py  pdf_server.py  pubmed_client.py  pubmed_server.py  research_server.py  server_config.json  server_config_bp.json  twitter_server.py  twitter_server_lite.py
(+42 files in other folders)
