[project]
name = "research-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-mcp-adapters>=0.1.9",
    "langchain>=0.3.27",
    "langgraph>=0.6.3",
    "langchain_openai>=0.3.28",
    "langgraph-api>=0.2.120",
    "langgraph-cli>=0.3.6",
    "langchain_tavily>=0.2.11",
    "mcp[cli]>=1.12.2",
    "httpx>=0.28.1",
    "llvmlite>=0.44.0",
    "scanpy>=1.11.4",
    "cellxgene-census>=1.17.0",
    "fastmcp>=2.11.1",
    "arxiv>=2.2.0",
]
